# credit-default

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 00_messy_starter.ipynb
src/credit_default/: __init__.py
