[project]
name = "credit-default"
version = "0.1.0"
description = "MLOps course Module 1: typed, tested, packaged credit-default classifier."
readme = "README.md"
authors = [
    { name = "janmanuelwinkler", email = "janwinkler@bluewin.ch" }
]
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["mlops", "credit-default", "scikit-learn"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
]

dependencies = [
  "pandas>=2.2",
  "numpy>=1.26,<3",
  "scikit-learn>=1.5",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "typer>=0.15",
  "loguru>=0.7",
  "ucimlrepo>=0.0.7",
  "joblib>=1.4",
]

[project.scripts]
credit-default = "credit_default.cli:app"

[project.urls]
Homepage = "https://github.com/your-handle/credit-default"
Issues   = "https://github.com/your-handle/credit-default/issues"

# ---------------------------------------------------------------- build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_default"]

# ---------------------------------------------------------------- uv
[dependency-groups]
dev = [
  "ruff>=0.15",
  "mypy>=1.13",
  "pandas-stubs>=2.2",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3.14",
  "hypothesis>=6",
  "pre-commit>=4",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
  "seaborn>=0.13",
]

[tool.uv]
# Keep dev group installed by default when developers run `uv sync`.
default-groups = ["dev"]

# ---------------------------------------------------------------- ruff
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["src", "tests"]
extend-exclude = ["notebooks/00_messy_starter.ipynb"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "N",            # pep8-naming
  "UP",           # pyupgrade
  "B",            # bugbear
  "C4",           # comprehensions
  "SIM",          # simplify
  "TCH",          # type-checking
  "PTH",          # use pathlib
  "RUF",          # ruff-specific
  "D",            # pydocstyle
  "S",            # bandit (security)
  "PL",           # pylint subset
  "PT",           # pytest style
  "NPY",          # numpy
  "PD",           # pandas-vet
]
ignore = [
  "E501",     # line length (handled by formatter)
  "D203",     # incompatible with D211
  "D213",     # incompatible with D212
  "PLR0913",  # too many arguments — common in ML
  "S101",     # asserts allowed (we'll add per-file ignore for tests anyway)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "PLR2004"]
"src/credit_default/cli.py" = ["B008"]   # typer uses Annotated default factories
"notebooks/**" = ["D", "E402", "PLR", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["credit_default"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version             = "3.12"
strict                     = true
warn_unreachable           = true
warn_unused_ignores        = true
disallow_untyped_decorators = true
plugins                    = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "ucimlrepo.*", "joblib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
minversion = "8.0"
addopts    = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=credit_default",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths  = ["tests"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:sklearn.*",
  "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------- coverage
[tool.coverage.run]
source        = ["credit_default"]
branch        = true
omit          = ["src/credit_default/cli.py"]

[tool.coverage.report]
fail_under     = 80
show_missing   = true
skip_covered   = false
exclude_also   = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]